--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,13 @@ android {
         targetSdk 32
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        //Accessing our API Key which we stored in local.properties
+
+        Properties properties = new Properties();
+        properties.load(project.rootProject.file("local.properties").newDataInputStream())
+        buildConfigField "String","API_KEY","\"${properties.getProperty("API_KEY")}\""
     }
 
     buildTypes {
