--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,24 @@ android {
 
         Properties properties = new Properties();
         properties.load(project.rootProject.file("local.properties").newDataInputStream())
-        buildConfigField "String","API_KEY","\"${properties.getProperty("API_KEY")}\""
+        buildConfigField "String", "API_KEY", "\"${properties.getProperty("API_KEY")}\""
+    }
+
+    flavorDimensions "environment"
+    productFlavors {
+        uat {
+            dimension "environment"
+            buildConfigField "String", "BASE_URL", "\"https://gateway.marvel.com\""
+            versionNameSuffix "-uat"
+            applicationIdSuffix ".uat"
+            resValue "string", "app_name", "MarvelApp - uat"
+        }
+
+        prod {
+            dimension "environment"
+            buildConfigField "String", "BASE_URL", "\"https://gateway.marvel.com\""
+            resValue "string", "app_name", "MarvelApp"
+        }
     }
 
     buildTypes {
@@ -65,4 +82,7 @@ dependencies {
     implementation "androidx.room:room-runtime:$roomVersion"
     testImplementation "androidx.room:room-testing:$roomVersion"
     annotationProcessor "androidx.room:room-compiler:$roomVersion"
+
+    implementation "io.reactivex.rxjava3:rxjava:$rxJavaVersion"
+    implementation "io.reactivex.rxjava3:rxandroid:$rxAndroidVersion"
 }
